--- a/index.html
+++ b/index.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" class="no-js">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>블로그 테스트</title>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0">
+<title>都市女子</title>
+<link href="css/style.css" rel="stylesheet" type="text/css">
+<link href="css/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen">
 </head>
+
+
 <body>
-    <h1>블로그 테스트</h1>
+    <div id="wrapper">
+        <div class="container clearfix"> 
+            <div class="main">
+                <div id="bg">
+                    <div class="header clearfix">
+<h1><a href="index.html">MAIN</a></h1>
+    <div class="nav">
+        <input type="checkbox" id="toggle">
+            <label for="toggle" class="toggle" onclick></label>
+        <ul class="menu">
+            <li><a href="html/about.html">ABOUT</a></li>
+            <li><a href="html/music.html">MUSIC</a></li>	
+            <li><a href="html/photo.html">PHOTO</a></li>
+            <li><a href="html/video.html">VIDEO</a></li>		
+        </ul>
+    </div><!-- nav 끝 -->
+                    </div><!-- header 끝 -->
+<div id="mainlogo">
+<h1>YUBIN</h1>
+
+</div>
+
+</div>
+
+
+
+</div><!-- main 끝-->
+</div> <!--container 끝-->
+</div><!--wrapper 끝-->
+
+
+<script type="text/javascript" charset="utf-8" src="js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function() {
+$('#wrapper').fadeIn(1000);
+});
+</script>
+
+<script type="text/javascript" src="js/jquery.fancybox.js"></script>
+<script type="text/javascript" src="js/jquery.fancybox-media.js"></script>
+
+
+<script type="text/javascript">
+$('.fancybox-media')
+.attr('rel', 'media-gallery')
+.fancybox({
+openEffect : 'none',
+closeEffect : 'none',
+prevEffect : 'none',
+nextEffect : 'none',
+
+arrows : false,
+helpers : {
+media : {},
+buttons : {}
+}
+});
+
+	var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-46828308-43']);
+		_gaq.push(['_trackPageview']);
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; 
+			ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();
+</script>
 </body>
 </html>
