--- a/html/about.html
+++ b/html/about.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0"><!---->
 <title>ABOUT</title>
-<meta name="keywords" content="YUBIN" />
+<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 <link href="../css/style.css" rel="stylesheet" type="text/css">
 <link href="../css/discography.css" rel="stylesheet" type="text/css">
 
