--- a/html/music.html
+++ b/html/music.html
@@ -56,7 +56,7 @@ body{
 </nav>
 <div class="clear"></div>
 <section>
-<div id="sect-main">
+<div id="sect-main-2">
         <div class="clear"></div>
 
         <div class="fullbox">
