--- a/html/music.html
+++ b/html/music.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0"><!---->
 <title>MUSIC</title>
 <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
 <link href="../css/style.css" rel="stylesheet" type="text/css">
 <link href="../css/music.css" rel="stylesheet" type="text/css">
 
